--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "method-override": "^3.0.0",
     "pg": "^8.8.0",
     "sequelize": "^6.25.6"
   }
